migrate spring boot to 3.4.5 version